--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/jackielii/simplest-redux-example#readme",
   "dependencies": {
+    "css-loader": "^0.28.4",
     "react": "^0.14.1",
     "react-dom": "^0.14.7",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.16",
