--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
   },
   "homepage": "https://github.com/jackielii/simplest-redux-example#readme",
   "dependencies": {
-    "css-loader": "^0.28.4",
     "react": "^0.14.1",
     "react-dom": "^0.14.7",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
-    "style-loader": "^0.18.2"
+    "redux": "^3.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.16",
@@ -36,8 +34,11 @@
     "babel-plugin-transform-react-constant-elements": "^6.0.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
+    "style-loader": "^0.18.2",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   }
